added: example routes, swagger, pgclient, addSong, deleteSong, updateSong
